# PhoenixVC-Website

./: .editorconfig  .gitignore  AZURE_APPSETTINGS_FIX.md  CONTRIBUTING.md  DEPLOYMENT.md  Gemfile  LICENSE  README.md  SOLUTION_SUMMARY.md  TODO.txt  _config.yml  eslint.config.js  git-tree-status.sh  index.html  index.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  staticwebapp.config.json  styles.css  tailwind.config.d.ts  tailwind.config.js  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json
.config/: prettierrc.json  pyproject.toml  requirements.txt  staticwebapp.config.json
.config/.devcontainer/: devcontainer.json
.config/.husky/: pre-commit
.devcontainer/: devcontainer.json
.devcontainer/scripts/: post-create.sh  (+1 more)
.github/: copilot-instructions.md
.husky/: pre-commit
_data/: navigation.yml
_layouts/: default.html  docs.html
css/: main.css  styles.css
docs/: BEST_PRACTICES.md  CODE_REVIEW_ANALYSIS.md  CODE_STYLE_GUIDELINES.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DETAILED_ANALYSIS_PHASE_1B_1D.md  FAQ.md  MOBILE_GAME_MODE_CONSIDERATIONS.md  PHASE_0_ANALYSIS.md  PHASE_1C_ANALYSIS.md  PHASE_1_ANALYSIS.md  PHASE_2_CONFIRMATION_REPORT.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  TECH_STACK.md  TROUBLESHOOTING.md  best-practices.md  context.md  contributing.md  design.md  index.md  mkdocs.yml  naming-conventions.md  tech_stack.md
scripts/: README.md  deploy.sh  rename_docs.py  show-git-changes.sh
src/: index.css  index.html
systemd/: spn-audit.service  spn-audit.timer
types/: eslint-plugin-react-hooks.d.ts
(+859 files in other folders)
