[tool.poetry]
name = "phoenixvc-modernized"
version = "0.1.0"
description = "Documentation for Phoenix VC"
authors = ["JustAGhosT <smit.jurie@gmail.com>"]
license = "Proprietary"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.4"
mkdocs-autorefs = "^1.3.1"
mkdocs-git-authors-plugin = "^0.9.2"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
